--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -118,7 +118,7 @@
 
     <br>
     <br>
-        <div id="content" class="uk-width-1-2" style="margin: 10px auto;">
+        <div id="content" class="uk-width-4-5 uk-flex-wrap" style="margin-left: 15% ;">
             {% include "baseProductCard.html" %}
 
         </div>
