--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -37,7 +37,7 @@
                         style="height: 50%; background-color: black; width: 2px"></div>
                 </li>
                 <li class="uk-active">
-                    <a href="/tasks/" style="font-size: 25px; text-transform: none;">Мастерская</a>
+                    <a href="/creators/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
                 </li>
             </ul>
         </div>
@@ -109,7 +109,7 @@
                     style="height: 50%; background-color: black; width: 2px"></div>
             </li>
             <li class="uk-active">
-                <a href="/tasks/" style="font-size: 25px; text-transform: none;">Мастерская</a>
+                <a href="/creators/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
             </li>
 
         </ul>
