--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -57,8 +57,8 @@
             </li>
 
             <li class="uk-active">
-                <a href="/tasks/">
-                    <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Мастерская</h3>
+                <a href="/creators/goods/">
+                    <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Магазин</h3>
                 </a>
             </li>
 
@@ -148,8 +148,8 @@
                     <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Бренды</h3>
                 </a>
             </li>
-            <li class="uk-active"><a href="/tasks/">
-                    <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Мастерская</h3>
+            <li class="uk-active"><a href="/creators/goods/">
+                    <h3 class="uk-button uk-button-link" style="font-size: 1.5rem;">Магазин</h3>
                 </a>
             </li>
             <li class="uk-nav-divider uk-margin-medium-top"></li>
