--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -46,10 +46,11 @@
                     <div class="uk-flex uk-flex-column uk-width-1" uk-width-auto">
                         <div data-src="https://images.unsplash.com/photo-1453728013993-6d66e9c9123a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cGhvdG9ncmFwaGVyfGVufDB8fDB8fA%3D%3D&w=1000&q=80"
                             class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover" uk-img>
+
                         </div>
                         <br>
                         <div uk-form-custom>
-                            <input type="file">
+                            <input name="logoImage" type="file" id="logoImage">
                             <button class="uk-button uk-width-2-5" type="button" tabindex="-1">Изменить
                                 фото</button>
                         </div>
@@ -63,11 +64,12 @@
                     </div>
                     <br>
                     <div uk-form-custom>
-                        <input type="file">
+                        <input name="bgImage" type="file" id="bgImage">
                         <button class="uk-button uk-width-1-5" type="button" tabindex="-1">Изменить
                             фото</button>
                     </div>
                 </div>
+
             </div>
         </div>
 
