--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -37,7 +37,7 @@
 </style>
 
 <body>
-    <form method="post" action="/becomeCreator/" style="margin-bottom: 10%">
+    <form method="post" action="/becomeCreator/" enctype="multipart/form-data" style="margin-bottom: 10%">
         {% csrf_token %}
 
         <div class="uk-flex uk-flex-middle uk-flex-around uk-width-4-5" style="margin: 2% auto;">
