--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -44,7 +44,7 @@
             <div class="uk-width-2-5 uk-flex uk-flex-row">
                 <div class="uk-width-4-5 uk-flex uk-flex-row">
                     <div class="uk-flex uk-flex-column uk-width-1" uk-width-auto">
-                        <div data-src="https://images.unsplash.com/photo-1453728013993-6d66e9c9123a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cGhvdG9ncmFwaGVyfGVufDB8fDB8fA%3D%3D&w=1000&q=80"
+                        <div data-src="{{shop.logoImage.url}}"
                             class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover" uk-img>
 
                         </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="uk-width-3-5 uk-flex uk-flex-row">
                 <div class="uk-flex uk-flex-column uk-width-1" uk-width-auto>
-                    <div data-src="https://html5css.ru/css/img_lights.jpg"
+                    <div data-src="{{shop.bgImage.url}}"
                         class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover" uk-img>
                     </div>
                     <br>
